--- a/part/templates/part/base.html
+++ b/part/templates/part/base.html
@@ -69,7 +69,7 @@
               <a class="nav-link scroll-link" href="{% url 'contact_us' %}">Contact us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link scroll-link" href="{% url 'logout' %}">Logout</a>
+              <form id="frm_logout" method="post" action="{% url 'logout' %}">     {% csrf_token %}     <a class="nav-link scroll-link" href="javascript:$('#frm_logout').submit();">Logout</a> </form>
             </li>
             {% else %}
             <li class="nav-item">
